--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.8.8",
-    "gulp-compass": "^1.3.3",
-    "gulp-autoprefixer": "^1.0.1",
+    "gulp-ruby-sass": "^0.7.1",
     "gulp-plumber": "^0.6.6",
     "gulp.spritesmith": "^1.4.0",
-    "gulp-ruby-sass": "^0.7.1",
     "gulp-hologram": "^1.0.1",
-    "gulp-cached": "^1.0.1"
+    "gulp-pleeease": "^1.1.0"
   }
 }
