--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.8.8",
-    "gulp-ruby-sass": "^0.7.1",
-    "gulp-plumber": "^0.6.6",
     "gulp.spritesmith": "^1.4.0",
-    "gulp-hologram": "^1.0.1",
-    "gulp-pleeease": "^1.1.0"
+    "gulp-changed": "^1.1.1",
+    "gulp-cached": "^1.0.2",
+    "gulp-pleeease": "^1.1.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-imagemin": "^2.1.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-ruby-sass": "^1.0.0-alpha.3",
+    "gulp-ejs": "^1.0.0"
   }
 }
